--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,13 +10,13 @@
     </head>
     <body>
         
-        <section class="wrapper">
+        <main class="wrapper">
             <div class="container">
                 <img src="./imgs/image-qr-code.png" alt="qr code">
                 <h1 class="title">Improve your front-end skills by building projects</h1>
                 <p class="description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
             </div>
-        </section>
+        </main>
         
     </body>
 </html>
